SUBDIRS = kcm knemod

#EXTRA_DIST = AUTHORS COPYING ChangeLog INSTALL README TODO knemo.lsm

#MAINTAINERCLEANFILES = subdirs configure.in acinclude.m4 configure.files 


#messages: rc.cpp
#	$(EXTRACTRC) `find . -name "*.ui"` >> rc.cpp
#	$(EXTRACTRC) `find . -name "*.rc"` >> rc.cpp
#	LIST=`find . -name \*.h -o -name \*.hh -o -name \*.H -o -name \*.hxx -o -name \*.hpp -o -name \*.cpp -o -name \*.cc -o -name \*.cxx -o -name \*.ecpp -o -name \*.C`; \
#	if test -n "$$LIST"; then \
#		$(XGETTEXT) $$LIST -o $(podir)/knemo.pot; \
#	fi

#include ../admin/Doxyfile.am

