find_package(Gettext REQUIRED)

if (NOT GETTEXT_MSGMERGE_EXECUTABLE)
   MESSAGE(FATAL_ERROR "Please install the msgmerge binary")
endif (NOT GETTEXT_MSGMERGE_EXECUTABLE)

IF(NOT GETTEXT_MSGFMT_EXECUTABLE)
   MESSAGE(FATAL_ERROR "Please install the msgfmt binary")
endif (NOT GETTEXT_MSGFMT_EXECUTABLE)

macro_optional_add_subdirectory( ar )
macro_optional_add_subdirectory( bg )
macro_optional_add_subdirectory( br )
macro_optional_add_subdirectory( cs )
macro_optional_add_subdirectory( cy )
macro_optional_add_subdirectory( da )
macro_optional_add_subdirectory( de )
macro_optional_add_subdirectory( el )
macro_optional_add_subdirectory( en_GB )
macro_optional_add_subdirectory( es )
macro_optional_add_subdirectory( et )
macro_optional_add_subdirectory( fr )
macro_optional_add_subdirectory( ga )
macro_optional_add_subdirectory( gl )
macro_optional_add_subdirectory( hu )
macro_optional_add_subdirectory( it )
macro_optional_add_subdirectory( ja )
macro_optional_add_subdirectory( ka )
macro_optional_add_subdirectory( lt )
macro_optional_add_subdirectory( nl )
macro_optional_add_subdirectory( pl )
macro_optional_add_subdirectory( pt )
macro_optional_add_subdirectory( pt_BR )
macro_optional_add_subdirectory( ru )
macro_optional_add_subdirectory( rw )
macro_optional_add_subdirectory( sk )
macro_optional_add_subdirectory( sr )
macro_optional_add_subdirectory( sr@Latn )
macro_optional_add_subdirectory( sv )
macro_optional_add_subdirectory( tr )
macro_optional_add_subdirectory( uk )
