install(
    FILES
    knemo-network-error.svg
    knemo-network-idle.svg
    knemo-network-offline.svg
    knemo-network-receive.svg
    knemo-network-transmit-receive.svg
    knemo-network-transmit.svg
    knemo-wireless-error.svg
    knemo-wireless-idle.svg
    knemo-wireless-offline.svg
    knemo-wireless-receive.svg
    knemo-wireless-transmit-receive.svg
    knemo-wireless-transmit.svg
    DESTINATION ${ICON_INSTALL_DIR}/breeze-dark/status/panel )
